Adding vulnerability scanner from BD CoPilot
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ notifications:
       - ybronshteyn@blackducksoftware.com
     on_success: change
     on_failure: always
+after_success:
+- mvn com.blackducksoftware.integration:hub-maven-plugin:1.4.0:createHubOutput -Dhub.output.directory=.
+- bash <(curl -s https://copilot.blackducksoftware.com/bash/travis) ./*_bdio.jsonld
 
